welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:6: error: '(' expected but identifier found.
	if !estFaceMur() {
           ^Balin:14: error: illegal start of simple expression
}
^